// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> should return the props text: prop text 1`] = `
<body>
  <div>
    <button
      class="sc-AxjAm kwfDhX"
    >
      <span>
        TestButton
      </span>
    </button>
  </div>
</body>
`;

exports[`<Button /> should return the state text: state text 1`] = `
<body>
  <div>
    <button
      class="sc-AxjAm kwfDhX"
    >
      <span>
        Button cliked
      </span>
    </button>
  </div>
</body>
`;
